# hackathon-evaluator

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  render-deploy.yml
backend/: main.py
backend/hackathon_eval/: __init__.py  batch_file_parse.py  benchmarks.py  canonical_report.py  config.py  doc_catalog.py  graph.py  graph_nodes.py  judge_output.py  pdf_extract.py  pdf_urls.py  persistence.py  prompts_system.py  protocol_validation.py  scoring.py  state.py  weighted_scores.py
backend/hackathon_eval/tools/: __init__.py  code_sketch.py  github_loader.py  knowledge.py  langchain_tools.py  repo_tools.py  scanner.py
backend/prompts/static/: EVALUATION_RUBRIC.md  FETCH_AGENT_PATTERNS.md  FETCH_DEVELOPMENT_RULES_FULL.md  FETCH_OFFICIAL_LINKS.md  (+3 more)
backend/scripts/: build_doc_url_manifest.py  pr_comment_bot.py
data/: .gitkeep
examples/: batch_submissions.csv  batch_urls.txt
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: error.tsx  globals.css  layout.tsx
frontend/components/: FeatureCard.tsx  HomePage.tsx  IssuesList.tsx  Loader.tsx  RepoInput.tsx  ScoreCard.tsx  SiteFooter.tsx  SummaryPanel.tsx  providers.tsx  theme-provider.tsx
frontend/context/: EvaluationContext.tsx
frontend/lib/: api.ts  evaluate-prefill.ts  evaluation-protocol.ts  stats-storage.ts
scripts/: render-bootstrap.sh
tests/: conftest.py  test_batch_csv.py  test_evaluator.py  test_pdf_extract.py  test_pdf_urls.py  test_submission_pdf.py
(+39 files in other folders)
