[project]
name = "hackathon-eval"
version = "1.0.0"
description = "AI hackathon repository evaluator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing_extensions>=4.12.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["hackathon_eval*"]
